--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <p class="project-title"><span class="code">&lt;</span>Coffee shop<span class="code">&#47;&gt;</span>
           </p>
         </a>
+      </div>
       </section>
       <section id="contact" class="contact-section">
         <div class="contact-section-header">
