--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <title>My Portfolio</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet' rel="noopener">
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" rel="noopener" />
     <link
-    href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet" />
+    href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet" rel="noopener"/>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet" rel="noopener" />
   </head>
   <body>
     <nav id="navbar" class="nav">
@@ -30,19 +30,16 @@
         <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank" class="project project-tile">
           <img class="project-image" src="img/atribute-page.png" alt="project" />
           <p class="project-title"><span class="code">&lt;</span>Tribute Page<span class="code">&#47;&gt;</span>
-          </p>
-        </a>
+          </p></a>
         <a href="https://codepen.io/freeCodeCamp/full/qRZeGZ" target="_blank" class="project project-tile">
           <img class="project-image" src="img/survey-form.png" alt="project" />
           <p class="project-title"><span class="code">&lt;</span>survey form<span class="code">&#47;&gt;</span>
-          </p>
-        </a>
-        <a href="https://codepen.io/freeCodeCamp/full/wgGVVX" target="_blank" class="project project-tile">
+          </p></a>
+        <a href="https://codepen.io/freeCodeCamp/full/wgGVVX" target="_blank" class="project project-tile" rel="noopener">
           <img class="project-image" src="img/skin-care.png" alt="project" />
           <p class="project-title"><span class="code">&lt;</span>
             skin care<span class="code">&#47;&gt;</span>
-          </p>
-        </a>
+          </p></a>
         <a href="https://codepen.io/freeCodeCamp/full/mVEJag" target="_blank" class="project project-tile" >
           <img class="project-image" src="img/project-landing.png" alt="project" />
           <p class="project-title"><span class="code">&lt;</span>Coffee shop<span class="code">&#47;&gt;</span>
@@ -65,9 +62,7 @@
       <footer>
         <p>This is simple Portfolio for project by Mehria 
         </p>
-        <p>&copy; Created by
-          <a href="https://www.freecodecamp.com/" target="_blank">Mehria<i class='bx bxl-sketch'></i>
-          </a>
+        <p>&copy; Created by<a href="https://www.freecodecamp.com/" target="_blank" rel="noopener">Mehria<i class='bx bxl-sketch'></i></a>
         </p>
       </footer>
       <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
