--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <section id="projects" class="projects-section">
       <h2 class="projects-section-header">These are some of my projects</h2>
       <div class="projects-grid">
-        <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank" class="project project-tile">
+        <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank" class="project project-tile" rel="noopener">
           <img class="project-image" src="img/atribute-page.png" alt="project" />
           <p class="project-title"><span class="code">&lt;</span>Tribute Page<span class="code">&#47;&gt;</span>
           </p></a>
-        <a href="https://codepen.io/freeCodeCamp/full/qRZeGZ" target="_blank" class="project project-tile">
+        <a href="https://codepen.io/freeCodeCamp/full/qRZeGZ" target="_blank" class="project project-tile" rel="noopener">
           <img class="project-image" src="img/survey-form.png" alt="project" />
           <p class="project-title"><span class="code">&lt;</span>survey form<span class="code">&#47;&gt;</span>
           </p></a>
@@ -40,7 +40,7 @@
           <p class="project-title"><span class="code">&lt;</span>
             skin care<span class="code">&#47;&gt;</span>
           </p></a>
-        <a href="https://codepen.io/freeCodeCamp/full/mVEJag" target="_blank" class="project project-tile" >
+        <a href="https://codepen.io/freeCodeCamp/full/mVEJag" target="_blank" class="project project-tile" rel="noopener">
           <img class="project-image" src="img/project-landing.png" alt="project" />
           <p class="project-title"><span class="code">&lt;</span>Coffee shop<span class="code">&#47;&gt;</span>
           </p>
